service.yaml

kind: Service
apiVersion: v1
metadata:
  name: felo-service
spec:
  selector:
    app: nginx
  ports:
    - port: 5678 # Default port for image
