ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx-example
  rules:
  - http:
      paths:
      - path: /felo
        pathType: Prefix
        backend:
          service:
            name: felo-service
            port:
              number: 80
      - path: /felo-backend
        pathType: Prefix
        backend:
          service:
            name: felo-service-backend
            port:
              number: 80
